--- a/wikihouse/webdialog/settings.html
+++ b/wikihouse/webdialog/settings.html
@@ -66,6 +66,15 @@
 			<em>(Feature still in development)</em>
 		</p>
 	</div>
+	<div class="section">
+		<label>
+			<b>Scale:</b> <input type="text" id="scale" size="10" /> 
+		</label>
+		<p>
+			This is the scale in the layout. <br>
+			<em>(Feature still in development)</em>
+		</p>
+	</div>
 	<!-- Send points to JavaScript -->
 	<div class="footer">
 		<button id="btnReset"
