--- a/wikihouse/webdialog/settings.html
+++ b/wikihouse/webdialog/settings.html
@@ -45,7 +45,7 @@
 		</label>
 		<p>
 			This is the minimum amount of distance between two parts. <br>
-			<em>(Feature still in development)</em>
+			<em></em>
 		</p>
 	</div>
 	<div class="section">
@@ -54,7 +54,7 @@
 		</label>
 		<p>
 			This is the height of the text used to mark the templates. <br>
-			<em>(Feature still in development)</em>
+			<em></em>
 		</p>
 	</div>
 	<div class="section">
@@ -63,7 +63,7 @@
 		</label>
 		<p>
 			This is the width of the drill. <br>
-			<em>(Feature still in development)</em>
+			<em></em>
 		</p>
 	</div>
 	<div class="section">
@@ -72,7 +72,23 @@
 		</label>
 		<p>
 			This is the scale in the layout. <br>
-			<em>(Feature still in development)</em>
+			<em></em>
+		</p>
+	</div>
+	<div class="section">
+		<label>
+			<b>Notches division:</b> <input type="text" id="notches_div" size="10" /> 
+		</label>
+		<p>
+			This is the division factor for notches. <br>
+			<em>(Odd number)</em>
+		</p>
+		<label>
+			<b>Notches min:</b> <input type="text" id="notches_min" size="10" /> mm
+		</label>
+		<p>
+			Minimum length for notches. <br>
+			<em></em>
 		</p>
 	</div>
 	<!-- Send points to JavaScript -->
